[package]
name = "hermes_urls"
version = "0.1.0"
authors = ["Jørgen P. Tjernø <jorgen@tjer.no>"]
edition = "2018"
# TODO, licensing, e.g. license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
log = "0.4"
mail_slot = "0.1"
simplelog = "^0.9.0"
structopt = "0.3"
thiserror = "^1"
url = "^2.2.0"

[target.'cfg(windows)'.dependencies]
winreg = { git = "https://github.com/jorgenpt/winreg-rs", branch = "multi_sz" }

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"

[package.metadata.winres]
OriginalFilename = "hermes_urls.exe"
FileDescription = "Hermes URL Handler"
ProductName = "Hermes URL Handler"
LegalCopyright = "© Jørgen P. Tjernø <jorgen@tjer.no>"